# Real-PR2-clustering-dynamique-pour-la-d-tection-et-le-suivi-d-objets-en-perception-interactive

./: README.md
classification/: Online PR2.ipynb
classification/.ipynb_checkpoints/: Online PR2-checkpoint.ipynb  Online Scene by Scene y_exp GPR-checkpoint.ipynb  Online Scene by Scene y_exp svm test fonction certitude effecteur-checkpoint.ipynb  Online Scene by Scene y_exp svm-checkpoint.ipynb  Online Scene by Scene y_true-checkpoint.ipynb
classification/utils/: mydisplay.py  myfct.py
outputs/env_gazebo/centroides/: centroides_scene1iter1.xyzrgbls  centroides_scene1iter2.xyzrgbls  centroides_scene1iter3.xyzrgbls  centroides_scene1iter4.xyzrgbls  centroides_scene1iter5.xyzrgbls  centroides_scene2iter1.xyzrgbls  centroides_scene2iter2.xyzrgbls  centroides_scene2iter3.xyzrgbls  centroides_scene2iter4.xyzrgbls  centroides_scene2iter5.xyzrgbls
outputs/env_gazebo/fpfh/: fpfh_scene1iter1.txt  fpfh_scene1iter2.txt  fpfh_scene1iter3.txt  fpfh_scene1iter4.txt  fpfh_scene1iter5.txt  fpfh_scene2iter1.txt  fpfh_scene2iter2.txt  fpfh_scene2iter3.txt  fpfh_scene2iter4.txt  fpfh_scene2iter5.txt
outputs/env_gazebo/vccs/: vccs_scene1iter1.xyzrgbls  vccs_scene1iter2.xyzrgbls  vccs_scene1iter3.xyzrgbls  vccs_scene1iter4.xyzrgbls  vccs_scene1iter5.xyzrgbls  vccs_scene2iter1.xyzrgbls  vccs_scene2iter2.xyzrgbls  vccs_scene2iter3.xyzrgbls  vccs_scene2iter4.xyzrgbls  vccs_scene2iter5.xyzrgbls
segmentation_PR2/: CMakeLists.txt  main.cpp
segmentation_PR2/libs/: CMakeLists.txt
segmentation_PR2/libs/codelibrary/base/: algorithm.h  log.h  message.h  object_pool.h
segmentation_PR2/libs/codelibrary/geometry/io/: xyz_io.h
segmentation_PR2/libs/codelibrary/geometry/kernel/: line_2d.h  line_3d.h  plane_3d.h  point_2d.h  point_3d.h  segment_2d.h  segment_3d.h  sphere_3d.h
segmentation_PR2/libs/codelibrary/geometry/point_cloud/: grid_sample.h  pca_estimate_normals.h  supervoxel_segmentation.h
segmentation_PR2/libs/codelibrary/geometry/transform/: project_3d.h
segmentation_PR2/libs/codelibrary/geometry/util/: center_2d.h  center_3d.h  compare_2d.h  compare_3d.h  distance_3d.h
segmentation_PR2/libs/codelibrary/math/: matrix.h  vector.h
segmentation_PR2/libs/codelibrary/math/matrix/: matrix.h  matrix_util.h  symmetric_eigen.h  triplet_matrix.h
segmentation_PR2/libs/codelibrary/math/matrix/decompose/: tridiagonal_decompose.h
segmentation_PR2/libs/codelibrary/math/vector/: vector.h  vector_2d.h  vector_3d.h
segmentation_PR2/libs/codelibrary/statistics/: principal_component_analysis_2d.h  principal_component_analysis_3d.h
segmentation_PR2/libs/codelibrary/statistics/regression/: linear_least_squares_fitting.h
segmentation_PR2/libs/codelibrary/util/array/: array_2d.h
segmentation_PR2/libs/codelibrary/util/metric/: squared_euclidean.h
segmentation_PR2/libs/codelibrary/util/set/: disjoint_set.h
segmentation_PR2/libs/codelibrary/util/tree/: kd_tree.h  octree.h
segmentation_PR2/libs/codelibrary/visualization/color/: rgb32_color.h
segmentation_PR2/libs/getter/: getter.h  getter.hpp
segmentation_PR2/libs/image_processing/: HistogramFactory.cpp  HistogramFactory.hpp  SupervoxelSet.cpp  SupervoxelSet.h  default_parameters.hpp  pcl_types.h  tools.cpp  tools.hpp
segmentation_PR2/libs/pairwise_segmentation/: CMakeLists.txt  main.cpp  pairwise_segmentation.h  pairwise_segmentation.hpp
segmentation_PR2/libs/papon/octree/: octree_pointcloud_sequential.h  octree_pointcloud_sequential_container.h
segmentation_PR2/libs/papon/octree/impl/: octree_pointcloud_sequential.hpp
segmentation_PR2/libs/papon/supervoxel/: sequential_supervoxel_clustering.h
segmentation_PR2/libs/papon/supervoxel/impl/: sequential_supervoxel_clustering.hpp
segmentation_PR2/libs/papon/supervoxel/src/: sequential_supervoxel_clustering.cpp
segmentation_PR2/libs/ransac_supervoxel_tracker/: ransac_supervoxel_tracker.h
segmentation_PR2/libs/ransac_supervoxel_tracker/impl/: ransac_supervoxel_tracker.hpp
segmentation_PR2/libs/supervoxel_tracker/: label_coherence.h  supervoxel_tracker.h
segmentation_PR2/libs/supervoxel_tracker/impl/: label_coherence.hpp  supervoxel_tracker.hpp
segmentation_PR2/libs/supervoxel_tracker/src/: supervoxel_tracker.cpp
